// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.edpaggregator;

option java_package = "org.wfanet.measurement.internal.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "RequisitionMetadataStateProto";

// The lifecycle state of a requisition.
enum RequisitionMetadataState {
  // Default, unspecified state.
  REQUISITION_METADATA_STATE_UNSPECIFIED = 0;
  // The requisition has been fetched and stored.
  REQUISITION_METADATA_STATE_STORED = 1;
  // The requisition is queued for processing.
  REQUISITION_METADATA_STATE_QUEUED = 2;
  // The requisition is actively being processed.
  REQUISITION_METADATA_STATE_PROCESSING = 3;
  // The requisition has been successfully fulfilled.
  REQUISITION_METADATA_STATE_FULFILLED = 4;
  // The requisition was refused.
  REQUISITION_METADATA_STATE_REFUSED = 5;
}